Normalize and update cpu/memory reservations

--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -39,6 +39,14 @@ Parameters:
     Type: String
   InfrastructureStorageStackName:
     Type: String
+  ContainerMemory:
+    Type: String
+  ContainerCpu:
+    Type: String
+  NginxProxyMemory:
+    Type: String
+  NginxProxyCpu:
+    Type: String
   # Dovetail ###################################################################
   DovetailEcrImageTag:
     Type: String
@@ -237,7 +245,7 @@ Resources:
     Type: "AWS::ECS::TaskDefinition"
     Properties:
       ContainerDefinitions:
-        - Cpu: 700
+        - Cpu: !Ref ContainerCpu
           Environment:
             - Name: APP_NAME
               Value: "dovetail"
@@ -256,7 +264,7 @@ Resources:
             Options:
               awslogs-group: !Ref DovetailLogGroup
               awslogs-region: !Ref AWS::Region
-          Memory: 600
+          Memory: !Ref ContainerMemory
           Name: "dovetail-express"
           PortMappings:
             - HostPort: 0
@@ -372,7 +380,7 @@ Resources:
     Type: "AWS::ECS::TaskDefinition"
     Properties:
       ContainerDefinitions:
-        - Cpu: 256
+        - Cpu: !Ref NginxProxyCpu
           Environment:
             - Name: CACHE_INACTIVE
               Value: "48h"
@@ -391,7 +399,7 @@ Resources:
             Options:
               awslogs-group: !Ref DovetailProxyLogGroup
               awslogs-region: !Ref AWS::Region
-          Memory: 1000
+          Memory: !Ref NginxProxyMemory
           Name: "dovetail-nginx"
           PortMappings:
             - HostPort: 0
