--- a/stacks/fourohfour.prx.org.yml
+++ b/stacks/fourohfour.prx.org.yml
@@ -17,6 +17,10 @@ Parameters:
     Type: String
   ECSServiceIAMRole:
     Type: String
+  ContainerMemory:
+    Type: String
+  ContainerCpu:
+    Type: String
   # ECR ########################################################################
   EcrRegion:
     Type: String
@@ -32,7 +36,7 @@ Resources:
     Type: "AWS::ECS::TaskDefinition"
     Properties:
       ContainerDefinitions:
-        - Cpu: 16
+        - Cpu: !Ref ContainerCpu
           Environment:
             - Name: APP_NAME
               Value: "fourohfour"
@@ -46,7 +50,7 @@ Resources:
             Options:
               awslogs-group: !Ref FourohfourLogGroup
               awslogs-region: !Ref AWS::Region
-          Memory: 128
+          Memory: !Ref ContainerMemory
           Name: !FindInMap [Shared, Container, name]
           PortMappings:
             - HostPort: 0
