--- a/stacks/jingle.prx.org.yml
+++ b/stacks/jingle.prx.org.yml
@@ -46,6 +46,10 @@ Parameters:
     Type: String
   SecretsBase:
     Type: String
+  ContainerMemory:
+    Type: String
+  ContainerCpu:
+    Type: String
   # Shared ENV #################################################################
   # Jingle ECS #################################################################
   JingleEcrImageTag:
@@ -108,7 +112,7 @@ Resources:
     Type: "AWS::ECS::TaskDefinition"
     Properties:
       ContainerDefinitions:
-        - Cpu: 128
+        - Cpu: !Ref ContainerCpu
           Environment:
             - Name: APP_NAME
               Value: "jingle"
@@ -128,7 +132,7 @@ Resources:
             Options:
               awslogs-group: !Ref JingleLogGroup
               awslogs-region: !Ref AWS::Region
-          Memory: 128
+          Memory: !Ref ContainerMemory
           Name: !FindInMap [Shared, Container, name]
           PortMappings:
             - HostPort: 0
