--- a/stacks/play.prx.org.yml
+++ b/stacks/play.prx.org.yml
@@ -48,6 +48,10 @@ Parameters:
     Type: String
   SecretsBase:
     Type: String
+  ContainerMemory:
+    Type: String
+  ContainerCpu:
+    Type: String
   # Shared ENV #################################################################
   # Play ECS ################################################################
   PlayEcrImageTag:
@@ -110,7 +114,7 @@ Resources:
     Type: "AWS::ECS::TaskDefinition"
     Properties:
       ContainerDefinitions:
-        - Cpu: 64
+        - Cpu: !Ref ContainerCpu
           Environment:
             - Name: APP_NAME
               Value: "play"
@@ -130,7 +134,7 @@ Resources:
             Options:
               awslogs-group: !Ref PlayLogGroup
               awslogs-region: !Ref AWS::Region
-          Memory: 128
+          Memory: !Ref ContainerMemory
           Name: !FindInMap [Shared, Container, name]
           PortMappings:
             - HostPort: 0
