Add RadioPublic CNAME for campaign

--- a/etc/radiotopia.fm-hosted_zone.yml
+++ b/etc/radiotopia.fm-hosted_zone.yml
@@ -160,3 +160,14 @@ Resources:
             DNSName: d1eoaqplfeeo8v.cloudfront.net
             # Global CloudFront hosted zone ID
             HostedZoneId: Z2FDTNDATAQYW2
+  Temp:
+    Type: "AWS::Route53::RecordSetGroup"
+    Properties:
+      Comment: Temporay
+      HostedZoneId: !Ref HostedZone
+      RecordSets:
+        - ResourceRecords:
+            - d39dsm1bpkt516.cloudfront.net.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub radiopublic.${Domain}
