--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -100,8 +100,8 @@ Mappings:
       abbreviation: prod
   ECSReservationMap:
     Staging:
-      RailsCpu: 128
-      RailsMemory: 400
+      BackendCpu: 128
+      BackendMemory: 400
       FrontendCpu: 64
       FrontendMemory: 200
       DovetailCpu: 128
@@ -109,8 +109,8 @@ Mappings:
       DovetailNginxCpu: 128
       DovetailNginxMemory: 400
     Production:
-      RailsCpu: 200
-      RailsMemory: 1400
+      BackendCpu: 200
+      BackendMemory: 1400
       FrontendCpu: 100
       FrontendMemory: 400
       DovetailCpu: 700
@@ -325,8 +325,8 @@ Resources:
               !Sub "${SecretsStackName}-SecretsBaseRegion"
         CastleEcrImageTag: !Ref CastleEcrImageTag
         CastleSecretsVersion: !Ref CastleSecretsVersion
-        ContainerMemory: !FindInMap [ECSReservationMap, !Ref EnvironmentType, RailsMemory]
-        ContainerCpu: !FindInMap [ECSReservationMap, !Ref EnvironmentType, RailsCpu]
+        ContainerMemory: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendMemory]
+        ContainerCpu: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendCpu]
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/castle.prx.org.yml"]]
       TimeoutInMinutes: "5"
   #### JINGLE ##################################################################
@@ -363,8 +363,8 @@ Resources:
               !Sub "${SecretsStackName}-SecretsBaseRegion"
         JingleEcrImageTag: !Ref JingleEcrImageTag
         JingleSecretsVersion: !Ref JingleSecretsVersion
-        ContainerMemory: !FindInMap [ECSReservationMap, !Ref EnvironmentType, RailsMemory]
-        ContainerCpu: !FindInMap [ECSReservationMap, !Ref EnvironmentType, RailsCpu]
+        ContainerMemory: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendMemory]
+        ContainerCpu: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendCpu]
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/jingle.prx.org.yml"]]
       TimeoutInMinutes: "5"
   #### upload.prx.org ##########################################################
@@ -460,8 +460,8 @@ Resources:
         AppName: "crier"
         CreateWorker: "true"
         ContainerPort: 3000
-        ContainerMemory: !FindInMap [ECSReservationMap, !Ref EnvironmentType, RailsMemory]
-        ContainerCpu: !FindInMap [ECSReservationMap, !Ref EnvironmentType, RailsCpu]
+        ContainerMemory: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendMemory]
+        ContainerCpu: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendCpu]
         HealthCheckPath: "/api/v1"
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/web-application.yml"]]
       TimeoutInMinutes: "5"
@@ -501,8 +501,8 @@ Resources:
         DesiredWebsProduction: 6
         DesiredWorkersProduction: 1
         ContainerPort: 3000
-        ContainerMemory: !FindInMap [ECSReservationMap, !Ref EnvironmentType, RailsMemory]
-        ContainerCpu: !FindInMap [ECSReservationMap, !Ref EnvironmentType, RailsCpu]
+        ContainerMemory: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendMemory]
+        ContainerCpu: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendCpu]
         HealthCheckPath: "/api/v1"
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/web-alb-application.yml"]]
       TimeoutInMinutes: "5"
@@ -582,8 +582,8 @@ Resources:
         AppName: "cms"
         CreateWorker: "true"
         ContainerPort: 3000
-        ContainerMemory: !FindInMap [ECSReservationMap, !Ref EnvironmentType, RailsMemory]
-        ContainerCpu: !FindInMap [ECSReservationMap, !Ref EnvironmentType, RailsCpu]
+        ContainerMemory: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendMemory]
+        ContainerCpu: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendCpu]
         HealthCheckPath: "/api/v1"
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/web-application.yml"]]
       TimeoutInMinutes: "5"
@@ -624,8 +624,8 @@ Resources:
         AppName: "id"
         CreateWorker: "false"
         ContainerPort: 3000
-        ContainerMemory: !FindInMap [ECSReservationMap, !Ref EnvironmentType, RailsMemory]
-        ContainerCpu: !FindInMap [ECSReservationMap, !Ref EnvironmentType, RailsCpu]
+        ContainerMemory: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendMemory]
+        ContainerCpu: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendCpu]
         HealthCheckPath: "/api/v1/certs"
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/web-application.yml"]]
       TimeoutInMinutes: "5"
