Fix prxu.org hosted zone comment

--- a/etc/prxu.org-hosted_zone.yml
+++ b/etc/prxu.org-hosted_zone.yml
@@ -11,7 +11,7 @@ Resources:
     Type: "AWS::Route53::HostedZone"
     Properties:
       HostedZoneConfig:
-        Comment: WIP User-generated Content
+        Comment: User-generated Content
       # HostedZoneTags:
       #   - Key: Project
       #     Value: radiotopia.fm
