--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -49,6 +49,12 @@ Parameters:
     Type: String
   SecretsInstanceAccessPolicyArn:
     Type: String
+  ThresholdCpu:
+    Type: String
+  ThresholdMemory:
+    Type: String
+  ThresholdCount:
+    Type: String
 Mappings:
   EnvironmentTypeMap:
     Testing:
@@ -588,6 +594,61 @@ Resources:
         - Key: Project
           Value: Infrastructure
       Timeout: 300
+  ECSScaleRole:
+    Type: "AWS::IAM::Role"
+    Properties:
+      Policies:
+        - PolicyName: "scale-lambda-inline"
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: "Allow"
+                Resource: "*"
+                Action:
+                  - logs:CreateLogGroup
+                  - logs:CreateLogStream
+                  - logs:PutLogEvents
+                  - ecs:DescribeContainerInstances
+                  - ecs:ListContainerInstances
+              - Effect: "Allow"
+                Resource: "*" # TODO: how to get an ASG ARN?
+                Action:
+                  - autoscaling:DescribeAutoScalingGroups
+                  - autoscaling:SetDesiredCapacity
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: "Allow"
+            Principal:
+              Service:
+                - "lambda.amazonaws.com"
+            Action:
+              - "sts:AssumeRole"
+      Path: "/"
+  ECSScaleFunction:
+    Type: "AWS::Lambda::Function"
+    Properties:
+      Code:
+        S3Bucket:
+          Fn::ImportValue:
+            !Sub ${InfrastructureStorageStackName}-InfrastructureSupportBucket
+        S3Key: utility/ecs-asg-sizer.zip
+      Description:
+      Environment:
+        Variables:
+          ASG_NAME: !Ref ECSClusterASG
+          ECS_CLUSTER: !Ref ECSCluster
+          THRESHOLD_CPU: !Ref ThresholdCpu
+          THRESHOLD_MEMORY: !Ref ThresholdMemory
+          THRESHOLD_COUNT: !Ref ThresholdCount
+      Handler: lambda_function.lambda_handler
+      MemorySize: 128
+      Role: !GetAtt ECSScaleRole.Arn
+      Runtime: python3.6
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+      Timeout: 30
 Outputs:
   ECSCluster:
     Description: >
