--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -189,6 +189,9 @@ Resources:
         OpsErrorMessagesSnsTopicArn:
           Fn::ImportValue:
             !Sub "${NotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+        SlackMessageRelaySnsTopicArn:
+          Fn::ImportValue:
+            !Sub "${NotificationsStackName}-SlackMessageRelaySnsTopicArn"
         SecretsInstanceDecryptPolicyArn:
           Fn::ImportValue:
             !Sub "${SecretsStackName}-SecretsInstanceDecryptPolicyArn"
