Default webhook, in case sns doesn't provide one

--- a/notifications/notifications.yml
+++ b/notifications/notifications.yml
@@ -166,6 +166,9 @@ Resources:
       Description: >
         Receives preformed Slack message payloads and sends them to the provided
         Incoming Webhook URL
+      Environment:
+        Variables:
+          DEFAULT_WEBHOOK_URL: !Ref CloudFormationSlackWebhookUrl
       Handler: index.handler
       MemorySize: 128
       Role: !GetAtt LambdaBasicExecutionIamRole.Arn
