More static trigger target ID

--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -688,7 +688,7 @@ Resources:
       State: DISABLED
       Targets:
         - Arn: !GetAtt ASGSizerFunction.Arn
-          Id: !Sub "${AWS::StackName}ASGt"
+          Id: !Sub "${EnvironmentType}-ECS-ASG-Sizing"
 Outputs:
   ECSCluster:
     Description: >
