Turn on ASG sizer trigger

--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -685,7 +685,7 @@ Resources:
         Runs the ECS ASG sizer periodically
       RoleArn: !GetAtt ASGSizerTriggerIAMRole.Arn
       ScheduleExpression: "rate(1 minute)"
-      State: DISABLED
+      State: ENABLED
       Targets:
         - Arn: !GetAtt ASGSizerFunction.Arn
           Id: !Sub "${EnvironmentType}-ECS-ASG-Sizing"
