Add invoke permission

--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -678,6 +678,13 @@ Resources:
                   - "lambda:InvokeFunction"
                 Resource:
                   - !GetAtt ASGSizerFunction.Arn
+  ASGSizerInvokeFunctionPermission:
+    Type: "AWS::Lambda::Permission"
+    Properties:
+      Action: lambda:InvokeFunction
+      FunctionName: !Ref ASGSizerFunction
+      Principal: events.amazonaws.com
+      SourceArn: !GetAtt ASGSizerFunctionEventTrigger.Arn
   ASGSizerFunctionEventTrigger:
     Type: "AWS::Events::Rule"
     Properties:
