--- a/notifications/notifications.yml
+++ b/notifications/notifications.yml
@@ -244,6 +244,68 @@ Resources:
       Dimensions:
         - Name: FunctionName
           Value: !Ref CloudFormationNotificationHandlerLambdaFunction
+  # ASG Autoscaling Notifications
+  ASGNotificationSnsTopic:
+    Type: "AWS::SNS::Topic"
+  ASGNotificationHandlerLambdaFunction:
+    Type: "AWS::Lambda::Function"
+    Properties:
+      Code:
+        S3Bucket:
+          Fn::ImportValue:
+            !Sub ${InfrastructureStorageStackName}-InfrastructureSupportBucket
+        S3Key: "notifications/autoscaling-notification-handler.zip"
+      Description: >
+        Handles autoscaling notifications from EC2 auto scaling groups
+      Environment:
+        Variables:
+          SLACK_MESSAGE_RELAY_TOPIC_ARN: !Ref SlackMessageRelaySnsTopic
+      Handler: index.handler
+      MemorySize: 128
+      Role: !GetAtt LambdaBasicExecutionIamRole.Arn
+      Runtime: nodejs6.10
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+      Timeout: 10
+  ASGNotificationPermission:
+    Type: "AWS::Lambda::Permission"
+    Properties:
+      Action: "lambda:InvokeFunction"
+      FunctionName: !Ref ASGNotificationHandlerLambdaFunction
+      Principal: sns.amazonaws.com
+      SourceArn: !Ref ASGNotificationSnsTopic
+  ASGNotificationSubscription:
+    Type: "AWS::SNS::Subscription"
+    Properties:
+      Endpoint: !GetAtt ASGNotificationHandlerLambdaFunction.Arn
+      Protocol: lambda
+      TopicArn: !Ref ASGNotificationSnsTopic
+  ASGNotificationHandlerErrorAlarm:
+    Type: "AWS::CloudWatch::Alarm"
+    Properties:
+      ActionsEnabled: true
+      AlarmName: ASG notifications handler Lambda Errors
+      AlarmActions:
+        - !Ref OpsWarnMessagesSnsTopic
+      InsufficientDataActions:
+        - !Ref OpsWarnMessagesSnsTopic
+      OKActions:
+        - !Ref OpsWarnMessagesSnsTopic
+      AlarmDescription: >
+        The error rate on the ASG notifications hander lambda has
+        exceeded 0 in the last minute.
+      ComparisonOperator: GreaterThanThreshold
+      EvaluationPeriods: "1"
+      MetricName: Errors
+      Namespace: AWS/Lambda
+      Period: "60"
+      Statistic: Sum
+      Threshold: "0"
+      TreatMissingData: notBreaching
+      Dimensions:
+        - Name: FunctionName
+          Value: !Ref ASGNotificationHandlerLambdaFunction
   # Ike
   IkeHandlerLambdaIamRole:
     Type: "AWS::IAM::Role"
@@ -621,6 +683,10 @@ Outputs:
     Value: !Ref CloudFormationNotificationSnsTopic
     Export:
       Name: !Sub ${AWS::StackName}-CloudFormationNotificationSnsTopic
+  ASGNotificationSnsTopic:
+    Value: !Ref ASGNotificationSnsTopic
+    Export:
+      Name: !Sub ${AWS::StackName}-ASGNotificationSnsTopic
   IkeCodePipelineApprovalHandlerCallbackUrl:
     Value: !Sub "https://${RestApi}.execute-api.${AWS::Region}.amazonaws.com/${RestApiStage}/ike/codepipeline/approval"
   IkeSlashCommandsHandlerCallbackUrl:
