--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -336,7 +336,7 @@ Resources:
     Properties:
       MinCapacity: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, DovetailMinCount]
       MaxCapacity: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, DovetailMaxCount]
-      ResourceId: !Join ["/", ["service", !Ref ECSCluster, !Sub ${AWS::StackName}-DovetailApp]]
+      ResourceId: !Join ["/", ["service", !Ref ECSCluster, !Sub "${AWS::StackName}-DovetailApp"]]
       RoleARN: !GetAtt DovetailAutoScalingIamRole.Arn
       ScalableDimension: "ecs:service:DesiredCount"
       ServiceNamespace: "ecs"
@@ -362,14 +362,14 @@ Resources:
       PolicyType: StepScaling
       ResourceId: !Ref DovetailAutoScaling
       StepScalingPolicyConfiguration:
-      AdjustmentType: ChangeInCapacity
-      Cooldown: 60
-      MetricAggregationType: Average
-      StepAdjustments:
-      - MetricIntervalLowerBound: 0
-        ScalingAdjustment: 2
-      - MetricIntervalUpperBound: 0
-        ScalingAdjustment: -1
+        AdjustmentType: ChangeInCapacity
+        Cooldown: 60
+        MetricAggregationType: Average
+        StepAdjustments:
+        - MetricIntervalLowerBound: 0
+          ScalingAdjustment: 2
+        - MetricIntervalUpperBound: 0
+          ScalingAdjustment: -1
   DovetailAutoScalingAlarm:
     Type: "AWS::CloudWatch::Alarm"
     Condition: CreateProductionResources
