--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -351,7 +351,7 @@ Resources:
           - Effect: "Allow"
             Principal:
               Service:
-                - "lambda.amazonaws.com"
+                - "application-autoscaling.amazonaws.com"
             Action:
               - "sts:AssumeRole"
       Path: "/"
