--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -363,7 +363,7 @@ Resources:
     Properties:
       PolicyName: String
       PolicyType: StepScaling
-      ResourceId: !Ref DovetailAutoScaling
+      ScalingTargetId: !Ref DovetailAutoScaling
       StepScalingPolicyConfiguration:
         AdjustmentType: ChangeInCapacity
         Cooldown: 60
